# windora-lms

./: .gitattributes  .gitignore  README.md  pyproject.toml
dev-lms-stubs/: README.md
dev-lms-stubs/JSON/: XS.pm
dev-lms-stubs/LWP/: UserAgent.pm
dev-lms-stubs/Slim/Control/: Request.pm
dev-lms-stubs/Slim/Menu/: AppMenu.pm
dev-lms-stubs/Slim/Plugin/: Base.pm
dev-lms-stubs/Slim/Utils/: Log.pm  Prefs.pm
dev-lms-stubs/Slim/Web/: HTTP.pm  Pages.pm
helper/: README.md  pyproject.toml
helper/scripts/: windora-lms-helper.service  windora-lms-helper.sh
helper/src/windora_lms/: lms_helper.py
helper/src/windora_lms/pandora/: __init__.py  client.py  constants.py  models.py
lms-plugin/Pandora/: Plugin.pm  Settings.pm  install.xml  strings.txt
plugin/Pandora/: Plugin.pm  ProtocolHandler.pm  Settings.pm  custom-convert.conf  install.xml  strings.txt
plugin/Pandora/HTML/EN/plugins/Pandora/settings/: basic.html
scripts/: sync-from-windora.sh  windora-lms-helper.service
src/windora_lms/: __init__.py  lms_helper.py
src/windora_lms/pandora/: crypto.py
