[project]
name = "windora-lms-helper"
version = "0.1.0"
description = "Pandora protocol helper service for the Logitech Media Server plugin."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Windora contributors" },
]
dependencies = [
    "requests>=2.32",
    "cryptography>=42.0",
]

[project.scripts]
windora-lms-helper = "windora_lms.lms_helper:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/windora_lms"]
